# esp32_watch

./: .gitignore  BUILD.md  CMakeLists.txt  Kconfig.projbuild  Makefile  QUICKSTART.md  README.md  TODO.md  sdkconfig  sdkconfig.all-features  sdkconfig.defaults  sdkconfig.minimal
.github/: CONFIG_FILES.md  copilot-feature-development.md  copilot-instructions.md
.github/instructions/: build-and-tools.md  embedded-best-practices.md  feature-flags.md  firmware-architecture.md  ui-patterns.md
.github/workflows/: build.yml  ota-release.yml  release-prepare.yml
components/axp2101_pmu/: CMakeLists.txt  Kconfig  pmu_axp2101.c  pmu_axp2101.h
components/button_handler/: CMakeLists.txt  button_handler.c  button_handler.h
components/ntp_client/: CMakeLists.txt  Kconfig  ntp_client.c  ntp_client.h
components/ota_manager/: CMakeLists.txt  Kconfig  ota_manager.c  ota_manager.h
components/pcf85063_rtc/: CMakeLists.txt  Kconfig  build_time.h  rtc_pcf85063.c  rtc_pcf85063.h
components/screen_manager/: CMakeLists.txt  Kconfig  safe_area.h  screen_manager.c  screen_manager.h  screen_navigation.c
components/settings_storage/: CMakeLists.txt  settings_storage.c  settings_storage.h
components/sleep_manager/: CMakeLists.txt  Kconfig  sleep_manager.c  sleep_manager.h
components/uptime_tracker/: CMakeLists.txt  Kconfig  README.md  uptime_tracker.c  uptime_tracker.h
components/wifi_manager/: CMakeLists.txt  Kconfig  README.md  wifi_manager.c  wifi_manager.h
docs/: AXP2101_REGISTER_MAP.md  BUILD.md  PHASE2_PROGRESS.md  PHASE2_SESSION2_SUMMARY.md  PHASE2_SESSION3_SUMMARY.md  PHASE2_SESSION4_SUMMARY.md  POWER_LIFECYCLE.md  PR_SUMMARY.md  QUICKSTART.md  README.md  SETTINGS_IMPLEMENTATION.md  SLEEP_CONFIG.md  UPTIME_QUICKREF.md  WATCHFACE_LAYOUT.md  WIFI_IMPLEMENTATION_PLAN.md  WIFI_NEXT_STEPS.md
main/: CMakeLists.txt  Kconfig  main.c
main/apps/settings/: settings.c  settings.h
main/apps/settings/screens/: about_screen.c  about_screen.h  display_settings.c  display_settings.h  ota_settings.c  ota_settings.h  screen_navigation.h  system_settings.c  system_settings.h  time_sync.c  time_sync.h  time_sync_server.c  time_sync_server.h  wifi_password.c  wifi_password.h  wifi_scan.c  wifi_scan.h  wifi_settings.c  wifi_settings.h
main/apps/watchface/: pmu_axp2101.c  pmu_axp2101.h  rtc_pcf85063.c  rtc_pcf85063.h  watchface.c  watchface.h
